--- a/app/views/alerts/edit.html.erb
+++ b/app/views/alerts/edit.html.erb
@@ -1,18 +1,23 @@
 <% content_for(:title) { "Edit Alert"} %>
+<% breadcrumb_buffer([{ "Projects": projects_path},
+                      { "#{@project_with_role.object.name}": edit_project_path(@project_with_role.object)},
+                      {"Alerts": project_alerts_path(@project_with_role.object)},
+                      {"#{@alert.name}": nil}]) %>
+
 <%= render 'shared/project_alert',
             url_tab1: edit_project_path(@project_with_role.object),
             url_tab2: project_alerts_path(@project_with_role.object),
             project_tab: 2 %>
 
-<div class='row'>
-  <div class='col-lg-6'>
-    <h4> Edit Alert </h4>
+<div class='form-wrapper'>
+  <%= panel "Edit Alert" do %>
     <%= render 'form', project_with_role: @project_with_role, alert: @alert %>
-  </div>
-  
-  <div class='col-lg-6'>
-    <%= render 'alert_groups', project_with_role: @project_with_role, alert: @alert  %>
-    <%= render 'alert_keywords', project_with_role: @project_with_role, alert: @alert  %>
-  </div>
+  <% end %>
+
+  <br />
+  <%= render 'alert_groups', project_with_role: @project_with_role, alert: @alert %>
+
+  <br />
+  <%= render 'alert_keywords', project_with_role: @project_with_role, alert: @alert %>
 </div>
 
