--- a/app/views/channels/_form.html.erb
+++ b/app/views/channels/_form.html.erb
@@ -1,18 +1,28 @@
-<%=form_for @channel, class: 'form form-horizontal' do |f| %>
+<%=form_for @channel, html: {class: 'form form-inline'} do |f| %>
   <% content_for(:save_button) do %>
     <div class='form-group form-action-group'>
-      <label></label>
+      <label> </label>
       <%=f.submit 'Save', label: false, class: 'btn btn-primary btn-app' %>
     </div>
   <% end %>
 
-  <div class="panel panel-default">
-    <a href='#' class="panel-heading setup-flow" >
-      Android Phone SMS Gateway - Basic Setup(Recommended)
-    </a>
+  <div class="panel panel-info">
+    <div class='panel-heading setup-flow clearfix' style='cursor:pointer;'>
+      <div class='pull-left' style='width: 60px; font-size: 40px; margin-top: 10px;' >
+        <i class='glyphicon glyphicon-phone' style='padding: 5px;'> </i>
+      </div>
+
+      <div style="margin-left: 45px;">
+         <h4> Android Phone SMS Gateway</h4>
+         <p class="sub-text">
+           Basic Setup (Recommended)
+         </p>
+      </div>
+    </div>
+
     <div class="panel-body" style="<%=channel_active(@channel, Channel::SETUP_FLOW_BASIC) %>">
        <p class="sub-text">
-          The android phone sms gateway allow you to use any adroid device as a local gateway for sending and receiving system SMS message Click here for instructions
+           The android phone sms gateway allow you to use any adroid device as a local gateway for sending and receiving system SMS message.
         </p>
 
         <div class="control-inline" id='channel-name-wrapper'>
@@ -26,22 +36,30 @@
           <%= f.text_field :ticket_code, class: 'form-control'%>
           <%= error_for(@channel, :ticket_code) %>
         </div>
-        <br />
+
         <%= yield(:save_button) %>
         <%= hidden_field_tag "channel[setup_flow]", Channel::SETUP_FLOW_BASIC %>
         </div>
   </div>
 <% end %>
 
-<%=form_for @channel, class: 'form form-horizontal' do |f| %>
-  <div class="panel panel-default">
-    <a href='' class="panel-heading setup-flow">
-      Android Phone SMS Gateway - Advanced Setup
-    </a>
+<%=form_for @channel, html: { class: 'form form-inline'} do |f| %>
+  <div class="panel panel-info">
+    <div class="panel-heading setup-flow" style="cursor: pointer;">
+
+      <div class='pull-left' style='width: 60px; font-size: 40px; margin-top: 10px;' >
+        <i class='glyphicon glyphicon-phone' style='padding: 5px;'> </i>
+      </div>
+
+      <div style='margin-left: 60px'>
+        <h4> Android Phone SMS Gateway</h4>
+        <p class="sub-text">Advanced Setup</p>
+      </div>
+    </div>
 
     <div class="panel-body" style="<%=channel_active(@channel, Channel::SETUP_FLOW_ADVANCED) %>">
       <p class="sub-text">
-       The android phone sms gateway allow you to use any adroid device as a local gateway for sending and receiving system SMS message Click here for instructions
+        The android phone sms gateway allow you to use any adroid device as a local gateway for sending and receiving system SMS message.
       </p>
 
       <div class="control-inline" id='channel-name-wrapper'>
@@ -55,7 +73,7 @@
         <%= f.password_field :password, class: 'form-control' %>
         <%= error_for(@channel, :password) %>
       </div>
-      <br />
+
       <%= yield(:save_button) %>
       <%= hidden_field_tag "channel[setup_flow]", Channel::SETUP_FLOW_ADVANCED %>
 
@@ -63,24 +81,34 @@
   </div>
 <% end %>
 
-<%=form_for @channel, class: 'form form-horizontal' do |f| %>
-  <div class="panel panel-default">
-    <a href='' class="panel-heading setup-flow">
-      SMS Gateway - Advanced SetupNational Gateway(Only Some Country Supported)
-    </a>
+<%=form_for @channel, html: { class: 'form form-inline'} do |f| %>
+  <div class="panel panel-info">
+    
+    <div class="panel-heading setup-flow clearfix">
+      <div class="pull-left" style='width: 60px; font-size: 40px; margin-top: 10px;'>
+        <i class='glyphicon glyphicon-cloud'></i>
+      </div>
+
+      <div style="margin-left: 60px">
+        <h4> Nuntium SMS Gateway</h4>
+        <p class="sub-text"> Advanced Setup - National Gateway(Only Some Country Supported)</p>
+      </div>
+    </div>
+
     <div class="panel-body" style="<%=channel_active(@channel, Channel::SETUP_FLOW_GLOBAL)%>">
       <p class="sub-text">
-       In a limited number of countries we have a gateway provided by a local phone company that can be used to send and recieve system messages. Please select the list below to
+        In a limited number of countries we have a gateway provided by a local phone company that can be used to send and recieve system messages.
+        Please select the list below
       </p>
-
       <div class="control-inline">
         <%= f.label :getway, 'SMS Gateway' %>
         <%= f.select :name, options_for_select(ChannelNuntium.global_sms_channel), {}, class: 'form-control' %>
       </div>
-      <br />
+
       <%= yield(:save_button) %>
       <%= hidden_field_tag "channel[setup_flow]", Channel::SETUP_FLOW_GLOBAL %>
 
     </div>
+
   </div>
 <% end %>
