--- a/app/views/groups/_search_member.html.erb
+++ b/app/views/groups/_search_member.html.erb
@@ -1,4 +1,4 @@
-<div>
+<div class='search-wrapper'>
   <div class="input-group">
     <input id='member-typeahead' type="text" 
           class="form-control typeahead" placeholder="Add Recipient"
@@ -17,5 +17,3 @@
          data-group-id='<%=group_with_role.object.id %>'
          >
 </div>
-
-<br />
