--- a/app/views/layouts/shared/_notification.html.erb
+++ b/app/views/layouts/shared/_notification.html.erb
@@ -11,3 +11,26 @@
     <p>{%=o.body%}</p>
   </div>
 </script>
+
+
+<div id='wapper-modal-confirm-delete'></div>
+
+<script id='tmpl-modal-confirm-delete' type="text/x-tmpl">
+  <div class="modal fade">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title">{%=o.title%}</h4>
+        </div>
+        <div class="modal-body">
+          <p>{%=o.message%}</p>
+          <p class='sub-text'> {%=o.messageExplain%} </p>
+        </div>
+        <div class="modal-footer" style='border-top:none;'>
+          <button type="button" class="btn btn-app btn-primary" data-dismiss="modal">Cancel</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</script>
