--- a/app/views/members/_search_group.html.erb
+++ b/app/views/members/_search_group.html.erb
@@ -1,4 +1,4 @@
-<div>
+<div class="search-wrapper">
   <div class="input-group">
     <input id='group-typeahead' type="text" 
           class="form-control typeahead" placeholder="Add Group"
@@ -17,5 +17,3 @@
          data-member-id='<%=@member.id %>'
          >
 </div>
-
-<br />
