--- a/app/views/users/password.html.erb
+++ b/app/views/users/password.html.erb
@@ -1,18 +1,23 @@
-<%= simple_form_for @user, { url: update_password_users_path, method: :put, html: { class: 'form-inline form', autocomplete: :off } } do |f| %>
-  <%= password_field_tag :skip, '', class: 'hidden' %>
-  <%=f.input :old_password, required: true, label: 'Old Password', 
-             input_html: {class: 'form-control', autocomplete: :off } %>
+<% content_for(:title) { "Change Password"} %>
+<% breadcrumb_buffer([{ "Change Password": nil}]) %>
 
-  <%=f.input :password, required: true,
-             input_html: {class: 'form-control', autocomplete: :off } %>
+<%= panel "Change Password" do %>
+  <%= simple_form_for @user, { url: update_password_users_path, method: :put, html: { class: 'form-inline form', autocomplete: :off } } do |f| %>
+    <%= password_field_tag :skip, '', class: 'hidden' %>
+    <%=f.input :old_password, required: true, label: 'Old Password', 
+               input_html: {class: 'form-control', autocomplete: :off } %>
 
-  <%=f.input :password_confirmation, required: true, label: 'Confirm',
-             input_html: {class: 'form-control', autocomplete: :off } %>
+    <%=f.input :password, required: true,
+               input_html: {class: 'form-control', autocomplete: :off } %>
+
+    <%=f.input :password_confirmation, required: true, label: 'Confirm',
+               input_html: {class: 'form-control', autocomplete: :off } %>
 
 
-  <div class='form-group form-action-group'>
-    <label class='control-label'></label>
-    <%=f.submit 'Change Password', class: 'btn btn-primary btn-app' %>
-  </div>
+    <div class='form-group form-action-group'>
+      <label class='control-label'></label>
+      <%=f.submit 'Change Password', class: 'btn btn-primary btn-app' %>
+    </div>
 
+  <% end %>
 <% end %>
