--- a/app/views/users/reset.html.erb
+++ b/app/views/users/reset.html.erb
@@ -1,3 +1,6 @@
+<% content_for(:title) { "Password Changed"} %>
+<% breadcrumb_buffer([{"Change Password": password_users_path},{ "Password Changed": nil}]) %>
+
 <%= page_header "Reset password user" %>
 
 <p style='color:gray;font-size: 14px;'>
