--- a/app/assets/stylesheets/base/object.scss
+++ b/app/assets/stylesheets/base/object.scss
@@ -19,7 +19,7 @@ label.required abbr{
 }
 
 form {
-  max-width: 800px;
+  // max-width: 800px;
   label {
     font-weight: 500
   }
@@ -72,8 +72,10 @@ label.inline {
 
 .header-title {
   font-size: 20px;
-  padding-bottom: 10px;
-  border-bottom: 1px solid #ccc;
+  // padding-bottom: 10px;
+  padding: 0;
+  margin: 0;
+  margin-top: 10px;
 }
 
 .header-group {
@@ -170,8 +172,7 @@ em.highlight {
   display: block;
 }
 .hoz-item {
-  border-bottom: 1px solid #eee;
-  background: #eee;
+  background: #d9edf7;
   margin-bottom: 5px;
   a {
     padding: 10px 5px;
@@ -192,8 +193,8 @@ em.highlight {
 
   .permission-first {
     display: inline-block;
-    max-width: 600px;
-    width: 600px;
+    max-width: 400px;
+    width: 400px;
   }
   
   .role-type {
@@ -215,4 +216,18 @@ em.highlight {
 }
 .error-field {
   color: red;
+}
+
+.breadcrumb-wrapper {
+  margin-left: 300px;
+  margin-top: 12px;
+}
+.header-wrapper {
+  margin-bottom: 10px;
+  .pull-right {
+    margin-top: 0px;
+  }
+}
+.autocomplete-box {
+  min-width: 320px;
 }
