--- a/app/views/alerts/index.html.erb
+++ b/app/views/alerts/index.html.erb
@@ -1,4 +1,8 @@
 <% content_for(:title) { "Alerts"} %>
+<% breadcrumb_buffer([{ "Projects": projects_path},
+                      { "#{@project_with_role.object.name}": edit_project_path(@project_with_role.object)},
+                      { "Alerts": nil}]) %>
+
 
 <%= render 'shared/project_alert',
             url_tab1: edit_project_path(@project_with_role.object),
@@ -6,58 +10,59 @@
             project_tab: 2 %>
 
 
-<div class='clearfix' style='margin-top: 15px;' >
+<div class='header-wrapper clearfix' >
+  <div class='pull-left'>
+    <h3 class='header-title'> List of Alerts </h3>
+  </div>
 
-  <div class='left'>
+  <div class='pull-right'>
     <%= link_custom 'Alert Content', matched_project_alerts_path(@project_with_role.object), class: 'btn btn-default'%>
     <% if @project_with_role.has_admin_role? %>
       <span> </span>
-      <%= link_custom'New Alert', new_project_alert_path(@project_with_role.object), class: 'btn btn-default' %>
+      <%= link_new 'New Alert', new_project_alert_path(@project_with_role.object), class: 'btn btn-default', style: 'margin-left: 5px;' %>
     <% end %>
-  </div>
-
-  <div class='right'>
-    <%= render 'shared/search_form', url: project_alerts_path(@project_with_role.object) %>
   </div>
 </div>
 
 
-<table class='table panel'>
-  <thead>
-    <tr>
-      <td width='400' >Alert</td>
-      <td>Groups</td>
-      <td>Keywords</td>
-      <% if @project_with_role.has_admin_role? %>
-        <td class='td-last'>Action</td>
-      <% end %>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @project_with_role.object.alerts.each do |alert| %>
+<div class="panel panel-info">
+  <table class='table table-responsive'>
+    <thead>
       <tr>
-        <td>
-          <%= link_to alert.name, edit_project_alert_path(@project_with_role.object, alert) %>
-          <div><%= alert.url %></div>
-          <% if alert.channel %>
-          <p class="sub-text">
-            <span>Sms alert </span> <%= alert_time(alert) %>
-              using channel <b> <%= alert.channel.name %></b>
-          </p>
-          <% end %>
-        </td>
-        <td><%= truncate(alert.groups.map(&:name).join(", "), length: 120) %></td>
-        <td><%= truncate(alert.keywords.map(&:name).join(", "), length: 120) %></td>
+        <td width='400' >Alert</td>
+        <td>Groups</td>
+        <td>Keywords</td>
         <% if @project_with_role.has_admin_role? %>
-        <td>
-           <%= link_edit " ", edit_project_alert_path(@project_with_role.object, alert) %>
-           <%= link_destroy " ", project_alert_path(@project_with_role.object, alert),
-                            method: :delete,
-                            data: { confirm: 'Are you sure to delete this alert ?'} %>
-        </td>
+          <td class='td-last'>Action</td>
         <% end %>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+
+    <tbody>
+      <% @project_with_role.object.alerts.each do |alert| %>
+        <tr>
+          <td>
+            <%= link_to alert.name, edit_project_alert_path(@project_with_role.object, alert) %>
+            <div><%= alert.url %></div>
+            <% if alert.channel %>
+            <p class="sub-text">
+              <span>Sms alert </span> <%= alert_time(alert) %>
+                using channel <b> <%= alert.channel.name %></b>
+            </p>
+            <% end %>
+          </td>
+          <td><%= truncate(alert.groups.map(&:name).join(", "), length: 120) %></td>
+          <td><%= truncate(alert.keywords.map(&:name).join(", "), length: 120) %></td>
+          <% if @project_with_role.has_admin_role? %>
+          <td>
+             <%= link_edit " ", edit_project_alert_path(@project_with_role.object, alert) %>
+             <%= link_destroy " ", project_alert_path(@project_with_role.object, alert),
+                              method: :delete,
+                              data: { confirm: 'Are you sure to delete this alert ?'} %>
+          </td>
+          <% end %>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
