--- a/app/views/shared/_content_url_modal.erb
+++ b/app/views/shared/_content_url_modal.erb
@@ -7,7 +7,7 @@
       </div>
 
       <div class="modal-footer">
-        <button type="button" class="btn btn-white" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-app btn-primary" data-dismiss="modal">Close</button>
       </div>
 
     </div>
