--- a/app/views/shared/_search_form.html.erb
+++ b/app/views/shared/_search_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag url, class: 'search-form', method: :get do %>
+<%= form_tag url, class: 'search-form', style: 'display:none', method: :get do %>
   <div class='search-box'>
     <i class='glyphicon glyphicon-search'> </i>
     <%= text_field_tag :query, params[:query], placeholder: 'Search' %>
